[gd_scene load_steps=4 format=3 uid="uid://b7rgr1o061kb7"]

[ext_resource type="Script" path="res://Scripts/UI/LevelMenu.gd" id="1_so21l"]
[ext_resource type="FontFile" uid="uid://cl2j3sd1wf5ch" path="res://Assets/Fonts/Chewy-Regular.ttf" id="2_lf38f"]
[ext_resource type="Theme" uid="uid://bne2hom5bb0sj" path="res://Theme/DefaultButton.tres" id="3_v8elj"]

[node name="LevelMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_so21l")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.152941, 0.152941, 0.231373, 1)
metadata/_edit_use_anchors_ = true

[node name="RightPanel" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.15

[node name="SelectLevel" type="Label" parent="CanvasLayer/RightPanel"]
modulate = Color(1, 0.843137, 0, 1)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 136.0
grow_horizontal = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_lf38f")
theme_override_font_sizes/font_size = 70
text = "Level Selection"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Location" type="Label" parent="CanvasLayer/RightPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -550.0
offset_bottom = -467.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_lf38f")
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/RightPanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -120.0
offset_right = -50.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2

[node name="LevelButtonContainer" type="GridContainer" parent="CanvasLayer/RightPanel/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 50
columns = 5

[node name="Button" type="Button" parent="CanvasLayer/RightPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -62.0
offset_top = -126.0
offset_right = 62.0
offset_bottom = -66.0
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
theme = ExtResource("3_v8elj")
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Back"

[connection signal="pressed" from="CanvasLayer/RightPanel/Button" to="." method="_on_button_pressed"]
